更新文件 index.html

--- a/index.html
+++ b/index.html
@@ -1649,7 +1649,7 @@
         },
         {
             "word": "optical storage",
-            "word_CN": "光存储",
+            "word_CN": "光存储器",
             "page": 121,
             "context": "A technology that records data as light and dark spots on a CD, DVD, or other optical media.",
             "context_CN": "一种将数据记录为CD，DVD或其他光学介质上的亮点和暗点的技术。"
@@ -1950,7 +1950,7 @@
         },
         {
             "word": "lidar",
-            "word_CN": "成交",
+            "word_CN": "激光雷达",
             "page": 145,
             "context": "A technique for measuring distance to a target using laser light; a key component of autonomous vehicles.",
             "context_CN": "一种使用激光测量到目标的距离的技术；自动驾驶汽车的关键组成部分。"
@@ -2209,7 +2209,7 @@
         },
         {
             "word": "circuit switching",
-            "word_CN": "电路切换",
+            "word_CN": "电路交换",
             "page": 177,
             "context": "The method used by the telephone network to temporarily connect one telephone with another for the duration of a call.",
             "context_CN": "电话网络在通话过程中暂时将一部电话与另一部电话连接的方法。"
@@ -2223,7 +2223,7 @@
         },
         {
             "word": "communication port",
-            "word_CN": "通讯口",
+            "word_CN": "通信端口",
             "page": 178,
             "context": "In the context of computer networks, a virtual location for data that arrives or leaves the device; common ports include",
             "context_CN": "在计算机网络的上下文中，是到达或离开设备的数据的虚拟位置。常见端口包括"
@@ -2447,7 +2447,7 @@
         },
         {
             "word": "voiceband modem",
-            "word_CN": "语音带调制解调器",
+            "word_CN": "声带调制解调器",
             "page": 193,
             "context": "The type of modem typically used to connect a computer to a telephone line.",
             "context_CN": "通常用于将计算机连接到电话线的调制解调器的类型。"
@@ -2496,7 +2496,7 @@
         },
         {
             "word": "tethering",
-            "word_CN": "系留",
+            "word_CN": "共享",
             "page": 197,
             "context": "Connecting devices to a network server that has a mobile Internet connection.",
             "context_CN": "将设备连接到具有移动Internet连接的网络服务器。"
@@ -3720,10 +3720,10 @@
             "context_CN": "一组陈述，描述收集的数据将如何被网站或其他收集数据的实体使用和不使用。"
         },
         {
-            "word": "IBM",
-            "word_CN": "IBM公司",
+            "word": "IBM PC",
+            "word_CN": "IBM PC",
             "page": 360,
-            "context": "PC An early, commercially successful personal computer system that featured a 4.77 MHz Intel 8088 processor,",
+            "context": "An early, commercially successful personal computer system that featured a 4.77 MHz Intel 8088 processor,",
             "context_CN": "PC一种在商业上成功的早期个人计算机系统，具有4.77 MHz的Intel 8088处理器"
         },
         {
@@ -3735,7 +3735,7 @@
         },
         {
             "word": "system requirements",
-            "word_CN": "系统要求",
+            "word_CN": "系统需求",
             "page": 382,
             "context": "(1) The minimum hardware and operating system specifications required for a software application to operate correctly.",
             "context_CN": "（1）软件应用程序正常运行所需的最低硬件和操作系统规格。"
@@ -3917,7 +3917,7 @@
         },
         {
             "word": "processes",
-            "word_CN": "流程",
+            "word_CN": "进程",
             "page": 392,
             "context": "Activities that are performed by the microprocessor.",
             "context_CN": "微处理器执行的活动。"
@@ -3987,21 +3987,21 @@
         },
         {
             "word": "data fork",
-            "word_CN": "数据叉",
+            "word_CN": "数据分支",
             "page": 399,
             "context": "An element of the Macintosh file system that comprises the part of the file that contains the text, audio, or video data; contrast with resource fork.",
             "context_CN": "Macintosh文件系统中的一个元素，包括包含文本，音频或视频数据的文件部分；与资源分叉形成对比。"
         },
         {
             "word": "resource fork",
-            "word_CN": "资源叉",
+            "word_CN": "资源分支",
             "page": 399,
             "context": "A storage characteristic of macOS that creates a file containing a description of the data stored in an accompanying raw data file.",
             "context_CN": "macOS的一种存储特征，它创建一个文件，其中包含对随附原始数据文件中存储的数据的描述。"
         },
         {
             "word": "iOS",
-            "word_CN": "的iOS",
+            "word_CN": "iOS",
             "page": 400,
             "context": "The operating system used for iPhones, iPods, and iPads.",
             "context_CN": "iPhone，iPod和iPad使用的操作系统。"
@@ -4022,21 +4022,21 @@
         },
         {
             "word": "forked",
-            "word_CN": "分叉",
+            "word_CN": "派生",
             "page": 402,
             "context": "In the context of opensource programming, the process of deriving a new version of a software application from an already established version.",
             "context_CN": "在开源编程的上下文中，是从已经建立的版本中派生新版本的软件应用程序的过程。"
         },
         {
             "word": "thin client",
-            "word_CN": "瘦客户",
+            "word_CN": "瘦客户机",
             "page": 402,
             "context": "A device or software that depends on software, storage, and other services provided by another device, such as a Web server.",
             "context_CN": "取决于其他设备（例如Web服务器）提供的软件，存储和其他服务的设备或软件。"
         },
         {
             "word": "Linux",
-            "word_CN": "的Linux",
+            "word_CN": "Linux",
             "page": 403,
             "context": "An open-source operating system commonly used for servers, and also available for desktop computers.",
             "context_CN": "一种通常用于服务器的开源操作系统，也可用于台式计算机。"
@@ -4197,7 +4197,7 @@
         },
         {
             "word": "font",
-            "word_CN": "使",
+            "word_CN": "字体",
             "page": 418,
             "context": "A typeface or style of lettering, such as Arial, Times New Roman, or gothic.",
             "context_CN": "字体或字体风格，例如Arial，Times New Roman或哥特式。"
@@ -4225,10 +4225,10 @@
         },
         {
             "word": "leading",
-            "word_CN": "领导",
+            "word_CN": "lead行距ing",
             "page": 418,
             "context": "Also called line spacing; the vertical spacing between lines of text.",
-            "context_CN": "也称为行距；文本行之间的垂直间距。"
+            "context_CN": "也称为line spacing；文本行之间的垂直间距。"
         },
         {
             "word": "page layout",
