--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <v-expansion-panel-content>
                                 {{glossary[index].word_CN}}
                                 <v-btn icon @click="show_note_edit=true">
-                                    <v-icon>mdi-pencil-box-outline</v-icon>
+                                    <v-icon color="#879298">mdi-pencil-circle-outline</v-icon>
                                 </v-btn>
                             </v-expansion-panel-content>
                         </v-expansion-panel>
@@ -206,6 +206,7 @@
                     <!-- {{index_history}} -->
             </v-content>
             <div class="copyright">
+                <div style="text-align:right" @click="copy_note_show=true">笔记</div>
                 <v-tooltip top>
                     <template v-slot:activator="{ on }">
                         <div v-on="on">
@@ -222,7 +223,7 @@
                 </v-tooltip>
             </div>
             <div class="explanationleft">
-                <div @click="copy_collection_show = true">收藏夹</div>
+                <div @click="copy_collection_show=true">收藏夹</div>
                 <v-tooltip top>
                     <template v-slot:activator="{ on }">
                         <div v-on="on">使用说明</div>
@@ -256,7 +257,24 @@
                         <v-btn text color="deep-purple accent-4" @click="pasteToCollection">
                             确定导入
                         </v-btn>
-                        <v-btn text color="deep-purple accent-4" @click="copy_collection_show = false">
+                        <v-btn text color="deep-purple accent-4" @click="copy_collection_show=false">
+                            取消
+                        </v-btn>
+                    </v-card-actions>
+                </v-card>
+            </v-dialog>
+            <v-dialog v-model="copy_note_show" width="500">
+                <v-card>
+                    <v-card-title>导入个人笔记</v-card-title>
+                    <v-card-text>
+                        <v-textarea filled type="text" v-model="paste_note_text"></v-textarea>
+                        <div style="color: #879298;">导出请手动复制&nbsp;&nbsp;导入将覆盖已有笔记</div>
+                    </v-card-text>
+                    <v-card-actions>
+                        <v-btn text color="deep-purple accent-4" @click="pasteToNotes">
+                            确定导入
+                        </v-btn>
+                        <v-btn text color="deep-purple accent-4" @click="copy_note_show=false">
                             取消
                         </v-btn>
                     </v-card-actions>
@@ -5712,6 +5730,8 @@
                 collection: [],
                 copy_collection_show: false,
                 paste_collection_text: "",
+                copy_note_show: false,
+                paste_note_text: "",
                 loading: false,
                 spell_text: "",
                 spell_success: false,
@@ -5756,8 +5776,9 @@
                 }
             },
             last_word() {
-                this.index_history.pop()
-                var last_index = this.index_history.pop()
+                this.index_history.pop();
+                var last_index = this.index_history.pop();
+                //TODO: 重复记录
                 if (last_index)
                     this.index = last_index;
                 else
@@ -5812,7 +5833,17 @@
                 } catch (error) {
                     alert("导入失败 (" + error + ")");
                 }
-            }
+            },
+            pasteToNotes() {
+                try {
+                    var notes = JSON.parse(this.paste_note_text);
+                    this.notes = notes;
+                    this.copy_note_show = false;
+                    alert("导入成功");
+                } catch (error) {
+                    alert("导入失败 (" + error + ")");
+                }
+            },
         },
         watch: {
             spell_text() {
@@ -5840,6 +5871,7 @@
                 handler() {
                     // console.log(this.notes);
                     localStorage.setItem("notes", JSON.stringify(this.notes));
+                    this.paste_note_text = JSON.stringify(this.notes);
                 }, deep: true
             },
             index_history() {
@@ -5860,12 +5892,13 @@
         },
         mounted: function () {
             var local_collection = localStorage.getItem("collection");
-            if (local_collection) this.collection = JSON.parse(local_collection)
             var local_history = localStorage.getItem("index_history");
-            if (local_history) this.index_history = JSON.parse(local_history)
             var local_notes = localStorage.getItem("notes");
-            console.log(local_notes);
-
+            console.log("collection:", local_collection);
+            console.log("history:", local_history);
+            console.log("notes:", local_notes);
+            if (local_collection) this.collection = JSON.parse(local_collection)
+            if (local_history) this.index_history = JSON.parse(local_history)
             if (local_notes) this.notes = JSON.parse(local_notes)
 
             var local_index = localStorage.getItem("index");
