更新文件 index.html

--- a/index.html
+++ b/index.html
@@ -2348,8 +2348,8 @@
             "word": "domain name",
             "word_CN": "域名",
             "page": 182,
-            "context": "Short for fully qualified domain name; an identifying name by which host computers on the Internet are familiarly known (for example, nike.com).",
-            "context_CN": "全限定域名的缩写； Internet上的主机所熟悉的标识名（例如，nike.com）。"
+            "context": "Short for fully qualified domain name; an identifying name by which host computers on the Internet are familiarly known (for example, cs161.cn).",
+            "context_CN": "全限定域名的缩写； Internet上的主机所熟悉的标识名（例如，cs161.cn）。"
         },
         {
             "word": "domain name system (DNS)",
@@ -2773,7 +2773,7 @@
         },
         {
             "word": "World Wide Web",
-            "word_CN": "全球资讯网",
+            "word_CN": "万维网",
             "page": 243,
             "context": "An Internetbased collection of linked HTML documents identified by URLs and accessed using browsers and the HTTP protocol; usually called the Web.",
             "context_CN": "基于Internet的链接HTML文档集合，这些URL文档由URL标识，并使用浏览器和HTTP协议进行访问；通常称为网络。"
@@ -2829,7 +2829,7 @@
         },
         {
             "word": "URL",
-            "word_CN": "网址",
+            "word_CN": "URL",
             "page": 249,
             "context": "(Uniform Resource Locator) The address of a Web page.",
             "context_CN": "（统一资源定位符）网页的地址。"
@@ -2892,7 +2892,7 @@
         },
         {
             "word": "plugin",
-            "word_CN": "插入",
+            "word_CN": "插件",
             "page": 261,
             "context": "A software module that adds a specific feature to a system. In the context of browsers, a plugin adds the ability to display or play various additional file formats.",
             "context_CN": "为系统添加特定功能的软件模块。在浏览器的上下文中，插件增加了显示或播放各种其他文件格式的功能。"
@@ -2913,7 +2913,7 @@
         },
         {
             "word": "private browsing",
-            "word_CN": "私人浏览",
+            "word_CN": "无痕浏览",
             "page": 264,
             "context": "A service offered by many browsers that deletes the browser cache and history list.",
             "context_CN": "许多浏览器提供的一项服务，它删除浏览器缓存和历史记录列表。"
@@ -2943,8 +2943,8 @@
             "word": "markup language",
             "word_CN": "标记语言",
             "page": 267,
-            "context": "A language that provides text and graphics formatting through the use of tags. Examples of markup languages include HTML, XML, and SgML.",
-            "context_CN": "一种通过使用标签提供文本和图形格式的语言。标记语言的示例包括HTML，XML和SgML。"
+            "context": "A language that provides text and graphics formatting through the use of tags. Examples of markup languages include HTML, XML, and SGML.",
+            "context_CN": "一种通过使用标签提供文本和图形格式的语言。标记语言的示例包括HTML，XML和SGML。"
         },
         {
             "word": "source document",
@@ -2961,7 +2961,7 @@
             "context_CN": "实用程序软件，可将文档，电子表格和数据库转换为可以在Web上发布的HTML文件。"
         },
         {
-            "word": "local HTML editors",
+            "word": "local HTML editor",
             "word_CN": "本地HTML编辑器",
             "page": 269,
             "context": "Software stored on a local device that can be used for creating HTML pages.",
@@ -3048,8 +3048,8 @@
             "word": "HTTP methods",
             "word_CN": "HTTP方法",
             "page": 279,
-            "context": "A set of commands, such as gET and POST, that are transmitted between Web servers and clients using the HTTP protocol.",
-            "context_CN": "使用HTTP协议在Web服务器和客户端之间传输的一组命令，例如gET和POST。"
+            "context": "A set of commands, such as GET and POST, that are transmitted between Web servers and clients using the HTTP protocol.",
+            "context_CN": "使用HTTP协议在Web服务器和客户端之间传输的一组命令，例如GET和POST。"
         },
         {
             "word": "HTTP session",
@@ -3074,7 +3074,7 @@
         },
         {
             "word": "cookie",
-            "word_CN": "曲奇饼",
+            "word_CN": "cookie",
             "page": 281,
             "context": "A message sent from a Web server to a browser and stored on a user's hard disk, usually containing information about the user.",
             "context_CN": "从Web服务器发送到浏览器并存储在用户硬盘上的消息，通常包含有关用户的信息。"
@@ -3123,7 +3123,7 @@
         },
         {
             "word": "invisible Web",
-            "word_CN": "看不见的网",
+            "word_CN": "暗网",
             "page": 289,
             "context": "Web sites that are not accessible to Web crawlers.",
             "context_CN": "Web搜寻器无法访问的网站。"
@@ -3235,21 +3235,21 @@
         },
         {
             "word": "geosocial networking",
-            "word_CN": "地社会网络",
+            "word_CN": "地标社交服务网络",
             "page": 319,
             "context": "Social networking services, such as yelp and google Maps, that offer location-based interaction.",
             "context_CN": "社交网络服务，例如yelp和google Maps，它们提供基于位置的交互。"
         },
         {
             "word": "social discovery",
-            "word_CN": "社会发现",
+            "word_CN": "社交发现",
             "page": 319,
             "context": "Connecting with other nearby users on a geosocial network.",
             "context_CN": "通过地理社交网络与附近的其他用户建立联系。"
         },
         {
             "word": "cell tower triangulation",
-            "word_CN": "细胞塔三角剖分",
+            "word_CN": "基站三角定位",
             "page": 320,
             "context": "The process used to find the location of a cellular phone by gauging the strength of its signal from nearby cell towers.",
             "context_CN": "通过测量附近手机发射塔发出的信号强度来查找手机位置的过程。"
@@ -3277,7 +3277,7 @@
         },
         {
             "word": "hotspot triangulation",
-            "word_CN": "热点三角剖分",
+            "word_CN": "热点三角定位",
             "page": 320,
             "context": "The process of locating a device based on its distance from various hotspot servers.",
             "context_CN": "根据设备与各种热点服务器之间的距离来定位设备的过程。"
@@ -3326,7 +3326,7 @@
         },
         {
             "word": "binary adjacency matrix",
-            "word_CN": "二元邻接矩阵",
+            "word_CN": "二维邻接矩阵",
             "page": 322,
             "context": "A representation in table format of the relationships among various people in a social network.",
             "context_CN": "社交网络中各个人之间的关系的表格格式表示。"
@@ -3389,7 +3389,7 @@
         },
         {
             "word": "public domain",
-            "word_CN": "公共区域",
+            "word_CN": "公有领域",
             "page": 330,
             "context": "Material that is not subject to copyright restrictions on its use and distribution.",
             "context_CN": "在使用和分发方面不受版权限制的材料。"
@@ -3403,7 +3403,7 @@
         },
         {
             "word": "copyleft",
-            "word_CN": "Copyleft",
+            "word_CN": "著佐权",
             "page": 332,
             "context": "A modification of copyright practices; allows third-party copying and distribution as long as the copies have the same license as the original.",
             "context_CN": "修改版权惯例；允许第三方复制和分发，只要这些副本具有与原始许可证相同的许可证即可。"
@@ -3542,7 +3542,7 @@
             "context_CN": "受到关注或流行。"
         },
         {
-            "word": "Twitter stream/timeline",
+            "word": "Twitter stream / timeline",
             "word_CN": "Twitter流/时间线",
             "page": 339,
             "context": "The succession of tweets displayed by Twitter; also called a \"feed.\"",
@@ -5791,16 +5791,16 @@
                 }
             },
             collect_word() {
+                if (this.collection.indexOf(this.index) > -1) {
+                    this.uncollect_word();
+                    return;
+                }
                 this.collection.push(this.index);
                 this.collection.sort(this.numberSort);
             },
             uncollect_word() {
-                for (let i = 0; i < this.collection.length; i++) {
-                    if (this.collection[i] == this.index) {
-                        this.collection.splice(i, 1);
-                        break;
-                    }
-                }
+                var index = this.collection.indexOf(this.index);
+                this.collection.splice(index, 1);
             },
             numberSort(a, b) {
                 return a - b
@@ -5944,6 +5944,9 @@
                     _this.last_word();
                 if (key == 39 || key == 40 || key == 68 || key == 83)
                     _this.next_word();
+                if (key == 32) {
+                    _this.collect_word();
+                }
 
             };
         },
